# offsets-db-data

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  PROTOCOL_VERSION_PR.md  README.md  TERMS_OF_DATA_ACCESS  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/: dependabot.yaml
.github/workflows/: CI.yaml  documentation.yaml  linting.yaml  pypi.yaml
classified-data/: project-type-display-names.json  project-types.csv
docs/: TERMS-OF-DATA-ACCESS.md  api.md  conf.py  credits.md  data-access.md  data-processing.md  glossary.md  index.md  install-offsets-db-data.md  projects.md  releasing.md  tutorial.md
offsets_db_data/: __init__.py  apx.py  arb.py  catalog.yaml  cercarbono.py  common.py  credits.py  data.py  gcc.py  gld.py  gs.py  isometric.py  models.py  openrefine.py  pipeline_utils.py  projects.py  registry.py  vcs.py  verra.py
offsets_db_data/configs/: all-protocol-mapping.json  beneficiary-mappings.json  berkeley-project-types.json  credits-raw-columns-mapping.json  projects-raw-columns-mapping.json  type-category-mapping.json
offsets_db_data/helpers/: registry.py
scripts/: audit-protocols.py  audit.py  check-beneficiary-coverage.py  extract-berkeley-project-types.py  upload-terms-of-data-access.py
tests/: conftest.py  test_apx.py  test_arb.py  test_audit_protocols.py  test_cercarbono.py  test_common.py  test_credits.py  test_gld.py  test_integration.py  test_isometric.py  test_openrefine.py  test_pipeline_utils.py  test_projects.py  test_protocol_version.py  test_smoke.py  test_vcs.py  test_verra.py
tests/data/american-carbon-registry/: cancellations.csv  issuances.csv  projects.csv  retirements.csv
tests/data/arb/: nc-arboc_issuance_sheet3.csv
tests/data/art-trees/: cancellations.csv  issuances.csv  projects.csv  retirements.csv
tests/data/cercarbono/: issuances.csv  projects.csv  retirements.csv
tests/data/climate-action-reserve/: cancellations.csv  issuances.csv  projects.csv  retirements.csv
tests/data/gold-standard/: issuances.csv  projects.csv  retirements.csv
tests/data/isometric/: issuances.csv  projects.csv  retirements.csv
tests/data/verra/: projects.csv  transactions.csv
tests/scripts/: refresh_sample_data.py
