[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]

[project]
    authors = [{ name = "CarbonPlan", email = "tech@carbonplan.org" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
    ]
    description = "Monitoring the global carbon market"
    license = { text = "MIT" }
    name = "offsets-db-data"
    readme = "README.md"
    requires-python = ">=3.10"

    dynamic = ["dependencies", "version"]

[project.scripts]
    offsets-db-data-orcli = "offsets_db_data.openrefine:main"

[tool.setuptools.dynamic]

    dependencies = { file = ["requirements.txt"] }
    optional-dependencies = { dev = { file = [
        "requirements-dev.txt",
    ] }, docs = { file = [
        "requirements-docs.txt",
    ] } }

[project.urls]
    "database web tool" = "https://carbonplan.org/research/offsets-db"
    "documentation"     = "https://offsets-db-data.readthedocs.io/"
    "explainer"         = "https://carbonplan.org/research/offsets-db-explainer"
    repository          = "https://github.com/carbonplan/offsets-db-data"

[tool.setuptools.packages.find]
    include = ["offsets_db_data*"]

[tool.setuptools.package-data]
    offsets_db_data = ["*.yaml", "configs/*.json", "py.typed"]

[tool.setuptools_scm]
    fallback_version  = "999"
    local_scheme      = "node-and-date"
    version_scheme    = "post-release"
    write_to          = "offsets_db_data/_version.py"
    write_to_template = '__version__ = "{version}"'

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[tool.ruff]
    extend-include = ["*.ipynb"]
    line-length    = 100
    target-version = "py310"

    builtins = ["ellipsis"]
    # Exclude a variety of commonly ignored directories.
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = [
        # Pyflakes
        "F",
        # Pycodestyle
        "E",
        "W",
        # isort
        "I",
        # Pyupgrade
        "UP",
    ]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = ["offsets_db_data"]

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    # Preserve types, even if a file imports `from __future__ import annotations`.
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts              = "-n auto --cov=./ --cov-report=xml  --cov-report=term-missing --verbose"
    console_output_style = "count"
