[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm>=8", "setuptools>=80"]

[tool.pixi.workspace]
    name        = "offsets-db-data"
    version     = "0.1.0"
    description = "Monitoring the global carbon market"
    authors     = ["CarbonPlan <tech@carbonplan.org>"]
    channels    = ["conda-forge"]
    platforms   = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
    # Development tasks
    test         = "pytest -s"
    test-cov     = "pytest -n auto --cov=./ --cov-report=xml --cov-report=term-missing --verbose"
    lint         = "ruff check ."
    format       = "ruff format ."
    format-check = "ruff format --check ."

    # Documentation tasks
    docs-build = "sphinx-build docs docs/_build"
    docs-clean = "rm -rf docs/_build"

    # Installation tasks
    install-cli = "offsets-db-data-orcli install --destination /usr/local/bin"

[tool.pixi.dependencies]
    python              = ">=3.10"
    country_converter   = "==1.0.0"
    dask                = "==2025.2.0"
    fastparquet         = "==2024.11"
    fsspec              = "==2025.2.0"
    intake-parquet      = ">=0.3.0"
    intake              = "<2"
    pandas              = "==2.2.2"
    pandera             = "==0.23"
    pydantic            = ">=2.10,<2.11"
    pyjanitor           = ">=0.23,<0.24"
    requests            = ">=2.31.0"
    s3fs                = "==2025.2.0"
    universal_pathlib   = ">=0.1.3"
    numpy               = ">=2"
    typer               = ">=0.15.2"
    click               = "==8.1.8" # pin until https://github.com/fastapi/typer/discussions/1215 is resolved
    pip                 = "*"

[tool.pixi.feature.dev.dependencies]
    pytest        = ">=7.4,<7.5"
    pytest-cov    = ">=4.1,<4.2"
    pytest-mock   = ">=3.10,<3.11"
    pytest-xdist  = ">=3.3,<3.4"
    requests-mock = ">=1.11,<1.12"
    hypothesis    = ">=6.111,<6.112"
    openpyxl      = "*"
    ruff          = "*"

[tool.pixi.feature.docs.dependencies]
    sphinx-book-theme   = ">=1.1.2"
    myst-nb             = "*"
    sphinx              = "*"
    sphinx-copybutton   = "*"
    sphinx-design       = "*"
    sphinxext-opengraph = "*"
    jupyterlab          = "*"
    sphinx-togglebutton = "*"

[tool.pixi.environments]
    default = ["dev"]
    dev     = ["dev"]
    docs    = ["docs"]
    all     = ["dev", "docs"]

[project]
    authors = [{ name = "CarbonPlan", email = "tech@carbonplan.org" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
    ]
    description = "Monitoring the global carbon market"
    license = "MIT"
    name = "offsets-db-data"
    readme = "README.md"
    requires-python = ">=3.10"

    # Note: Primary dependency management is via Pixi (see [tool.pixi.*] sections below)
    # Dependencies are also defined here for pip compatibility
    dependencies = [
        "country_converter==1.0.0",
        "dask==2025.2.0",
        "fastparquet==2024.11",
        "fsspec==2025.2.0",
        "intake-parquet>=0.3.0",
        "intake<2",
        "pandas==2.2.2",
        "pandera==0.23",
        "pydantic>=2.10,<2.11",
        "pyjanitor>=0.23,<0.24",
        "requests>=2.31.0",
        "s3fs==2025.2.0",
        "universal_pathlib>=0.1.3",
        "numpy>=2",
        "typer>=0.15.2",
        "click==8.1.8", # pin until https://github.com/fastapi/typer/discussions/1215 is resolved
    ]

    dynamic = ["version"]

[project.optional-dependencies]
    dev = [
        "pytest>=7.4,<7.5",
        "pytest-cov>=4.1,<4.2",
        "pytest-mock>=3.10,<3.11",
        "pytest-xdist>=3.3,<3.4",
        "requests-mock>=1.11,<1.12",
        "hypothesis>=6.111,<6.112",
        "openpyxl",
        "ruff",
    ]
    docs = [
        "sphinx-book-theme>=1.1.2",
        "myst-nb",
        "sphinx",
        "sphinx-copybutton",
        "sphinx-design",
        "sphinxext-opengraph",
        "jupyterlab",
        "sphinx-togglebutton",
    ]
    all = [
        "offsets-db-data[dev,docs]",
    ]

[project.scripts]
    offsets-db-data-orcli = "offsets_db_data.openrefine:main"

[project.urls]
    "database web tool" = "https://carbonplan.org/research/offsets-db"
    "documentation"     = "https://offsets-db-data.readthedocs.io/"
    "explainer"         = "https://carbonplan.org/research/offsets-db-explainer"
    repository          = "https://github.com/carbonplan/offsets-db-data"

[tool.setuptools.packages.find]
    include = ["offsets_db_data*"]

[tool.setuptools.package-data]
    offsets_db_data = ["*.yaml", "configs/*.json", "py.typed"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[tool.ruff]
    extend-include = ["*.ipynb"]
    line-length    = 100
    target-version = "py310"

    builtins = ["ellipsis"]
    # Exclude a variety of commonly ignored directories.
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = [
        # Pyflakes
        "F",
        # Pycodestyle
        "E",
        "W",
        # isort
        "I",
        # Pyupgrade
        "UP",
    ]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = ["offsets_db_data"]

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    # Preserve types, even if a file imports `from __future__ import annotations`.
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts              = "-n auto --cov=./ --cov-report=xml  --cov-report=term-missing --verbose"
    console_output_style = "count"
